--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies":{
     "gulp":"latest",
     "gulp-watch":"latest",
-    "gulp-concat":"latest"
+    "gulp-concat":"latest",
+    "gulp-sourcemaps":"latest"
   }
 }
