--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "gulp-yuidoc":"latest",
         "gulp-docco":"latest",
         "gulp-less":"latest",
-        "gulp-jshint":"latest"
+        "gulp-jshint":"latest",
+        "gulp-autoprefixer":"latest"
     }
 }
