将当前操作的button元素当作参数传递给action

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "gulp-jshint": "latest",
         "gulp-uglify": "latest",
         "gulp-csso": "latest",
-        "gulp-autoprefixer": "latest"
+        "gulp-autoprefixer": "latest",
+        "gulp-size":"latest"
     }
 }
